Add manageiq created_on timestamp for container entities
Container entities currently don't have manageiq addition
timestamp. The commit adds created_on column and renames
creation_timestamp column to ems_created_on, to maintain
consistency with other manageiq entities.

The affected container entities are: nodes, pods, replicators,
projects, services, routes, quotas, builds, pod builds,
container limits, and volumes.

I made few other necessary changes to make sure this isn't
causing regression.

--- a/product/reports/170_Configuration Management - Containers/040_Recently Discovered Container Groups.yaml
+++ b/product/reports/170_Configuration Management - Containers/040_Recently Discovered Container Groups.yaml
@@ -7,12 +7,12 @@ db: ContainerGroup
 cols:
 - name
 - ready_condition_status
-- creation_timestamp
+- ems_created_on
 include: {}
 col_order:
 - name
 - ready_condition_status
-- creation_timestamp
+- ems_created_on
 headers:
 - Name
 - Ready Status
@@ -20,7 +20,7 @@ headers:
 conditions:
 order: Descending
 sortby:
-- creation_timestamp
+- ems_created_on
 group:
 graph:
 dims:
