--- a/spec/models/rss_feed/data/newest_hosts.yml
+++ b/spec/models/rss_feed/data/newest_hosts.yml
@@ -5,7 +5,7 @@ feed_description: "Host machines added"
 feed_link: "/alert/rss?feed=newest_hosts"
 
 # Item metadata
-item_title: "#{rec.name}, hostname: #{rec.hostname}, running #{rec.vmm_vendor} VMM"
+item_title: "#{rec.name}, hostname: #{rec.hostname}, running #{rec.vmm_vendor_display} VMM"
 item_description: "#{rec.name}, hostname: #{rec.hostname}"
 item_link: "/host/show/#{rec.id}"
 item_class: Host
@@ -15,13 +15,12 @@ item_class: Host
 #   Custom method is called the following way:
 #     <item_class>.method(<search_method>).<name>, <options>)
 #   A nil value or a value of "find" use the default class find method
-search_method: 
-limit_to_time: 
-limit_to_count: 
+search_method:
+limit_to_time:
+limit_to_count:
 orderby: "created_on DESC"
 
 # tags_include: any or all
 tag_ns: "/managed/lifecycles"
-tags_include: 
-tags: 
-    
+tags_include:
+tags:
