--- a/product/reports/520_Events - Policy/110_Policy Events.yaml
+++ b/product/reports/520_Events - Policy/110_Policy Events.yaml
@@ -3,7 +3,7 @@ where_clause:
 dims: 
 created_on: 2009-04-03 16:56:10 Z
 reserved: 
-title: Policy Events for Last Week
+title: Policy Events for Last Week - Sample 1
 conditions: !ruby/object:MiqExpression
   exp:
     ">=":
@@ -12,7 +12,7 @@ conditions: !ruby/object:MiqExpression
 updated_on: 2009-04-06 20:19:27 Z
 order: Ascending
 graph: 
-menu_name: Policy Events for Last Week
+menu_name: Policy Events for Last Week - Sample 1
 rpt_group: Custom
 priority: 
 col_order: 
