Add consumption_administrator user
Add also group EvmGroup-consumption_administrator and
role EvmRole-consumption_administrator, this role have this permissions:
Everything
Cloud Intelligence
Dashboard
Reports
Chargeback

--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -1015,3 +1015,10 @@
   - vm
   - vm_cloud_explorer
   - vm_infra_explorer
+
+- :name: EvmRole-consumption_administrator
+  :read_only: true
+  :miq_product_feature_identifiers:
+  - dashboard
+  - chargeback
+  - miq_report
