--- a/db/fixtures/role_map.yaml
+++ b/db/fixtures/role_map.yaml
@@ -13,3 +13,4 @@
   - EvmGroup-user_limited_self_service: user_limited_self_service
   - EvmGroup-tenant_administrator: tenant_administrator
   - EvmGroup-tenant_quota_administrator: tenant_quota_administrator
+  - EvmGroup-consumption_administrator: consumption_administrator
