--- a/product/toolbars/auth_key_pair_cloud_center_tb.yaml
+++ b/product/toolbars/auth_key_pair_cloud_center_tb.yaml
@@ -4,11 +4,11 @@
 - :name: auth_key_pair_cloud_policy
   :items:
   - :buttonSelect: auth_key_pair_cloud_choice
-    :image: policy
+    :icon: fa fa-shield fa-lg
     :title: Policy
     :text: Policy
     :items:
     - :button: auth_key_pair_cloud_tag
-      :image: tag
+      :icon: pficon pficon-edit fa-lg
       :text: "Edit Tags"
       :title: 'Edit tags for this Key Pair'
