--- a/product/toolbars/auth_key_pair_clouds_center_tb.yaml
+++ b/product/toolbars/auth_key_pair_clouds_center_tb.yaml
@@ -4,14 +4,14 @@
 - :name: auth_key_pair_cloud_policy
   :items:
   - :buttonSelect: auth_key_pair_cloud_policy_choice
-    :image: policy
+    :icon: fa fa-shield fa-lg
     :title: Policy
     :text: Policy
     :enabled: 'false'
     :onwhen: '1+'
     :items:
     - :button: auth_key_pair_cloud_tag
-      :image: tag
+      :icon: pficon pficon-edit fa-lg
       :text: "Edit Tags"
       :title: 'Edit tags for the selected items'
       :url_parms: 'main_div'
