Enabled auto placement of newly provisioned Azure VMs

--- a/product/dialogs/miq_dialogs/miq_provision_azure_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_azure_dialogs_template.yaml
@@ -140,7 +140,7 @@
             true: 1
           :description: Choose Automatically
           :required: false
-          :display: :hide
+          :display: :edit
           :default: false
           :data_type: :boolean
         :resource_group:
