Security Groups support for Azure provisioning

--- a/product/dialogs/miq_dialogs/miq_provision_azure_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_azure_dialogs_template.yaml
@@ -172,7 +172,7 @@
             :method: :allowed_security_groups
           :description: Security Groups
           :required: false
-          :display: :hide
+          :display: :edit
           :data_type: :integer
       :display: :show
     :service:
