--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -68,6 +68,7 @@ AllCops:
   RunRailsCops: true
   Exclude:
     - config/toolbar_strings.rb
+    - gems/pending/VMwareWebService/wsdl41/vimws25MappingRegistry.rb
 ClassAndModuleChildren:
   Enabled: false
 DefEndAlignment:
